# pet_equations

./: .gitignore  README.md  hamon.py  hargreaves.py  pyproject.toml  setup.py
pet_equations/: __init__.py  checking.py  conversions.py  hamon.py  hargreaves.py  meteorological_vars.py
pet_equations/methods/: hamon.py  hargreaves.py  penman_monteith_FAO.py
pet_equations/methods_parameters/: alternatives_equations.py  astronomical_variables.py  meteorological_variables.py  radiation_variables.py
tests/: test_hargreaves.py  test_meteorological_vars.py
tests/test_methods/: test_hargreaves.py  test_penman_monteith_FAO.py  test_penman_monteith_FAO2.py  test_penman_montheith_FAO.py  test_penman_montheith_FAO2.py
tests/test_methods_parameters/: test_astronomic_variables.py  test_meteorological_variables.py  test_radiation_variables.py
